// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contingent in consequent 1`] = `
  () => (
    <div className={!!true && "element_3ld"}>
      <div className="inner_79m">Hello</div>
    </div>
  );
  
  css(\`
  	.element_3ld .inner_79m.foo-bar {
  		background: blue;
  	}
  \`);
`;

exports[`contingent on consequent 1`] = `
  () => (
    <div className={!!true && "element_3ld"}>
      <div className="div_1cq">Hello</div>
    </div>
  );
  
  css(\`
  	.element_3ld .div_1cq.foo-bar {
  		background: blue;
  	}
  \`);
`;

exports[`multiple contingent on consequent 1`] = `
  () => (
    <div className={!!active && "element_3ld"}>
      <div>Hello</div>
    </div>
  );
  
  css(\`
  	.element_3ld.foo {
  		color: red;
  	}
  	.element_3ld.bar {
  		color: red;
  	}
  \`);
`;
